SFDCProject/src/objects/Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Custom settings to all general settings for the appliication. These settings should be accessed via Sf.settingsService.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Please enter some description about the settings.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Environment_Specific__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select the checkbox if this settings value changes between environment to environment. This would help validate the settings after the deployment.</inlineHelpText>
        <label>Environment Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value10__c</fullName>
        <label>Value10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value1__c</fullName>
        <label>Value1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value2__c</fullName>
        <label>Value2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Settings</label>
</CustomObject>